@@ -1,5 +1,6 @@
 0.07
  - Remove diacritics from author name.
+ - Update Module::Install to 1.16 version.
 
 0.06 2014-08-17T11:58:11+02:00
  - Fix LICENSE file.
